--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav menu_nav justify-content-end">
               <li class="nav-item"><a class="nav-link" href="index.html">Casa</a></li> 
               <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li> 
-              <li class="nav-item"><a class="nav-link" href="services.html">Servicios</a>
+              <li class="nav-item"><a class="nav-link" href="services.html">Cotizador Aquí</a>
               <li class="nav-item active"><a class="nav-link" href="contact.html">Contactanos</a></li>
             </ul>
           </div> 
