--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="nav navbar-nav menu_nav justify-content-end">
               <li class="nav-item"><a class="nav-link" href="index.html">Casa</a></li> 
               <li class="nav-item"><a class="nav-link" href="about.html">sobre</a></li> 
-              <li class="nav-item active"><a class="nav-link" href="services.html">Servicio</a>
+              <li class="nav-item active"><a class="nav-link" href="services.html">Cotizador Aquí</a>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contactanos</a></li>
             </ul>
           </div> 
@@ -76,6 +76,78 @@
     </div>
   </section>
   <!--================ Hero sm Banner end =================-->
+  
+
+  <section class="section-margin">
+    <div class="container">
+      <div class="section-intro text-center pb-65px">
+        <h2 class="section-intro__title">Invitacion a conocer Softseguros</h2>
+        <p>Cumplimos con tus sueños y espectativas, te ayudamos a llevar contol sobre tus polizas, pagos, recordar esa fechas especiales entre varias funciones más. </p>
+      </div>
+      <div class="row mb-60px">
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
+          <div class="card card-subject">
+            <div class="card-subject__img">
+              <img class="card-img rounded-0" src="img/home/subject-1.png" alt="">
+              <div class="card-subject__imgOverlay">
+                <img src="img/home/hover-icon.png" alt="">
+              </div>
+            </div>
+            <div class="card-subject__body">
+              <h3><a href="#">Educacion</a></h3>
+              <p>Te enseñamos a como utilizar nustros servicio para mejorar tu experiencia</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
+          <div class="card card-subject">
+            <div class="card-subject__img">
+              <img class="card-img rounded-0" src="img/home/soporte.png" alt="">
+              <div class="card-subject__imgOverlay">
+                <img src="img/home/hover-icon.png" alt="">
+              </div>
+            </div>
+            <div class="card-subject__body">
+              <h3><a href="#">Soporte</a></h3>
+              <p>Comunicate con nustros equipo de soporte para despejar tus dudas o inconformidades</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
+          <div class="card card-subject">
+            <div class="card-subject__img">
+              <img class="card-img rounded-0" src="img/home/actualizacion.png" alt="">
+              <div class="card-subject__imgOverlay">
+                <img src="img/home/hover-icon.png" alt="">
+              </div>
+            </div>
+            <div class="card-subject__body">
+              <h3><a href="#">Actualizaciones</a></h3>
+              <p>Mantenemos en constante desarrollo para mejorar cada dia más nuestra opciones.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
+            <div class="card card-subject">
+              <div class="card-subject__img">
+                <img class="card-img rounded-0" src="img/home/subject-4.png" alt="">
+                <div class="card-subject__imgOverlay">
+                  <img src="img/home/hover-icon.png" alt="">
+                </div>
+              </div>
+              <div class="card-subject__body">
+                <h3><a href="#"></a>Almacenamiento</h3>
+                <p>Nuestro software cuenta con tres servidores en los cuales quedan almacenados toda tu inforcion, sin nesecidad de enredarte con documentos es tu oficina. </p>
+              </div>
+            </div>
+          </div>
+  </section>
+
+
+
 
 
  
