--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Servicios</title>
+  <title>Cotizador Aquí</title>
 	<link rel="icon" href="img/logo miko.jpg" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -37,6 +37,7 @@
   </section>
   <!--================ Header Top Area end =================-->
 
+
   <!--================ Header Menu Area start =================-->
   <header class="header_area">
     <div class="main_menu">
@@ -52,7 +53,7 @@
             <ul class="nav navbar-nav menu_nav justify-content-end">
               <li class="nav-item"><a class="nav-link" href="index.html">Casa</a></li> 
               <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li> 
-              <li class="nav-item active"><a class="nav-link" href="services.html">Servicios</a>
+              <li class="nav-item active"><a class="nav-link" href="services.html">Cotizador Aquí</a>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contactanos</a></li>
             </ul>
           </div> 
@@ -61,11 +62,11 @@
     </div>
   </header>
   <!--================Header Menu Area =================-->
-
+  
   <!--================ Hero sm Banner start =================-->      
   <section class="hero-banner hero-banner--sm">
     <div class="hero-banner__content text-center">
-      <h1>Nuestros Servicios </h1>
+      <h1>Nuestros Servicios</h1>
       <nav aria-label="breadcrumb" class="banner-breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Casa</a></li>
@@ -75,78 +76,16 @@
     </div>
   </section>
   <!--================ Hero sm Banner end =================-->
-
-
   <section class="section-margin">
     <div class="container">
       <div class="section-intro text-center pb-65px">
-        <h2 class="section-intro__title">Invitacion a conocer Softseguros</h2>
-        <p>Cumplimos con tus sueños y espectativas, te ayudamos a llevar contol sobre tus polizas, pagos, recordar esa fechas especiales entre varias funciones más. </p>
+        <h2 class="section-intro__title">Invitacion a conocer nuestro Nuevo servicio</h2>
+        <h3 style="width: space 34px;"style='width: 45px'>Ingresa para conocer y ser parte del Multicotizador para autos</h3>
+        <h4 style="width: space 34px;">¡Te esperamos!</h4>
+        <a class="button mt-xl-3" href="https://pruebasmulticotizador.softseguros.com/external?token=4ca1499c-8c6b-4885-b1ca-f127a6736fa1">Ingresa al Cotizador</a>
       </div>
-      <div class="row mb-60px">
-        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
-          <div class="card card-subject">
-            <div class="card-subject__img">
-              <img class="card-img rounded-0" src="img/home/subject-1.png" alt="">
-              <div class="card-subject__imgOverlay">
-                <img src="img/home/hover-icon.png" alt="">
-              </div>
-            </div>
-            <div class="card-subject__body">
-              <h3><a href="#">Educacion</a></h3>
-              <p>Te enseñamos a como utilizar nustros servicio para mejorar tu experiencia</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
-          <div class="card card-subject">
-            <div class="card-subject__img">
-              <img class="card-img rounded-0" src="img/home/soporte.png" alt="">
-              <div class="card-subject__imgOverlay">
-                <img src="img/home/hover-icon.png" alt="">
-              </div>
-            </div>
-            <div class="card-subject__body">
-              <h3><a href="#">Soporte</a></h3>
-              <p>Comunicate con nustros equipo de soporte para despejar tus dudas o inconformidades</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
-          <div class="card card-subject">
-            <div class="card-subject__img">
-              <img class="card-img rounded-0" src="img/home/actualizacion.png" alt="">
-              <div class="card-subject__imgOverlay">
-                <img src="img/home/hover-icon.png" alt="">
-              </div>
-            </div>
-            <div class="card-subject__body">
-              <h3><a href="#">Actualizaciones</a></h3>
-              <p>Mantenemos en constante desarrollo para mejorar cada dia más nuestra opciones.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-lg-4 col-xl-3 mb-5">
-            <div class="card card-subject">
-              <div class="card-subject__img">
-                <img class="card-img rounded-0" src="img/home/subject-4.png" alt="">
-                <div class="card-subject__imgOverlay">
-                  <img src="img/home/hover-icon.png" alt="">
-                </div>
-              </div>
-              <div class="card-subject__body">
-                <h3><a href="#"></a>Almacenamiento</h3>
-                <p>Nuestro software cuenta con tres servidores en los cuales quedan almacenados toda tu inforcion, sin nesecidad de enredarte con documentos es tu oficina. </p>
-              </div>
-            </div>
-          </div>
-  </section>
-
-
-
+    </section>
+  
 
 
   <!-- ================ start footer Area ================= -->
