--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
   <section class="section-margin">
     <div class="container">
       <div class="section-intro text-center pb-65px">
-        <h2 class="section-intro__title">Invitacion a conocer nuestro Nuevo servicio</h2>
+        <h2 class="section-intro__title">Invitacion a conocer nuestro nuevo servicio</h2>
         <h3 style="width: space 34px;"style='width: 45px'>Ingresa para conocer y ser parte del Multicotizador para autos</h3>
         <h4 style="width: space 34px;">¡Te esperamos!</h4>
         <a class="button mt-xl-3" href="https://pruebasmulticotizador.softseguros.com/external?token=4ca1499c-8c6b-4885-b1ca-f127a6736fa1">Ingresa al Cotizador</a>
