--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul class="nav navbar-nav menu_nav justify-content-end">
               <li class="nav-item"><a class="nav-link" href="index.html">Casa</a></li> 
               <li class="nav-item"><a class="nav-link" href="about.html">sobre</a></li> 
-              <li class="nav-item active"><a class="nav-link" href="services.html">Cotizador Aquí</a>
+              <li class="nav-item"><a class="nav-link" href="services.html">Cotizador Aquí</a>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contactanos</a></li>
             </ul>
           </div> 
