--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
         <h3>¿Quienes somos?</h3>
         <p>Una página web es la entrada, imagen y representación de su negocio online o físico. Por eso, no hay segundas oportunidades para causar buenas primeras impresiones. Nos encargamos del diseño y desarrollod de páginas webs comerciales que fortalezcan la marca de la empresa o producto, que añadan valor agregado a sus clientes y marquen una clara diferencia con la competencia.</p>
         <p>Trabajamos bajo los más altos estándares de desarrollo y seguridad, brindando soluciones simples e innovadoras pero al mismo tiempo robustas y fácilmente escalables.</p>
-        <a class="button mt-xl-3" href="#">Learn More</a>
+        <a class="button mt-xl-3" href="#">Aprende Más</a>
       </div>
     </div>
   </section>
@@ -173,12 +173,12 @@
           <div class="single-footer-widget">
             <h6>Acerca de nuestra empresa</h6>
             <p>
-              El mundo os ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
+              El mundo nos ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Links de Navegación</h6>
+            <h6>Enlaces de Navegación</h6>
             <div class="row">
               <div class="col">
                 <ul>
