--- a/contact.html
+++ b/contact.html
@@ -177,12 +177,12 @@
             <div class="single-footer-widget">
               <h6>Acerca de nuestra empresa</h6>
               <p>
-                El mundo os ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
+                El mundo nos ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="single-footer-widget">
-              <h6>Links de Navegación</h6>
+              <h6>Enlaces de Navegación</h6>
               <div class="row">
                 <div class="col">
                   <ul>
