--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
         <h2 class="section-intro__title">Invitacion a conocer nuestro nuevo servicio</h2>
         <h3 style="width: space 34px;"style='width: 45px'>Ingresa para conocer y ser parte del Multicotizador para autos</h3>
         <h4 style="width: space 34px;">¡Te esperamos!</h4>
-        <a class="button mt-xl-3" href="https://pruebasmulticotizador.softseguros.com/external?token=4ca1499c-8c6b-4885-b1ca-f127a6736fa1"style='margin: bottom 50px'>Ingresa al Cotizador</a>
+        <a class="button mt-xl-3" href="https://pruebasmulticotizador.softseguros.com/external?token=4ca1499c-8c6b-4885-b1ca-f127a6736fa1">Ingresa al Cotizador</a>
       </div>
     </section>
   
@@ -96,12 +96,12 @@
           <div class="single-footer-widget">
             <h6>Acerca de nuestra empresa</h6>
             <p>
-              El mundo os ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
+              El mundo nos ofreece las herramientas para crear soluciones, y mejorar nuestra calidad de vida.
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Links de Navegación</h6>
+            <h6>Enlaces de Navegación</h6>
             <div class="row">
               <div class="col">
                 <ul>
