change de nuevo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
       <div class="d-sm-flex justify-content-between">
         <ul class="header-top__info mb-2 mb-sm-0">
           <li><a href="tel:+01432152323"><span class="align-middle"><i class="ti-mobile"></i></span>+014 321 523 23</a></li>
-          <li><a href="mailto:info@example.com"><span class="align-middle"><i class="ti-email"></i></span>Info@example.com</a></li>
+          <li><a href="mailto:info@example.com"><span class="align-middle"><i class="ti-email"></i></span>Info@ejemplo.com</a></li>
         </ul>
         <ul class="header-top__social">
           <li><a href="#"><i class="ti-facebook"></i></a></li>
