--- a/services.html
+++ b/services.html
@@ -76,12 +76,12 @@
     </div>
   </section>
   <!--================ Hero sm Banner end =================-->
-  <section class="section-margin">
-    <div class="container">
-      <div class="section-intro text-center pb-65px">
-        <h2 class="section-intro__title">Invitacion a conocer nuestro nuevo servicio</h2>
-        <h3 style="width: space 34px;"style='width: 45px'>Ingresa para conocer y ser parte del Multicotizador para autos</h3>
-        <h4 style="width: space 34px;">¡Te esperamos!</h4>
+  <section class="homework">
+    <div class="homework01">
+      <div class="homework02">
+        <h2 class="homework03">Invitacion a conocer nuestro nuevo servicio</h2>
+        <h3 class="homework04">Ingresa para conocer y ser parte del Multicotizador para autos</h3>
+        <h4 class="homework05">¡Te esperamos!</h4>
         <a class="button mt-xl-3" href="https://pruebasmulticotizador.softseguros.com/external?token=4ca1499c-8c6b-4885-b1ca-f127a6736fa1">Ingresa al Cotizador</a>
       </div>
     </section>
